Fixed bug #41347 (checkdnsrr() segfaults on empty hostname).