ext/standard/dns.c
@@ -264,6 +264,12 @@ PHP_FUNCTION(dns_check_record)
 			}
 			type = T_MX;
 			convert_to_string_ex(arg1);
+			
+			if (Z_STRLEN_PP(arg1) == 0)
+			{
+				php_error_docref(NULL TSRMLS_CC, E_WARNING, "Host cannot be empty");
+				RETURN_FALSE;
+			}
 			break;
 
 		case 2:
@@ -272,6 +278,12 @@ PHP_FUNCTION(dns_check_record)
 			}
 			convert_to_string_ex(arg1);
 			convert_to_string_ex(arg2);
+
+			if (Z_STRLEN_PP(arg1) == 0 || Z_STRLEN_PP(arg2) == 0)
+			{
+				php_error_docref(NULL TSRMLS_CC, E_WARNING, "Host and type cannot be empty");
+				RETURN_FALSE;
+			}
 
 			if (!strcasecmp("A", Z_STRVAL_PP(arg2))) type = T_A;
 			else if (!strcasecmp("NS",    Z_STRVAL_PP(arg2))) type = DNS_T_NS;
